# armerge

./: Cargo.toml
armerge/: Cargo.toml
armerge-cli/: Cargo.toml
armerge-cli/src/: main.rs
