[package]
name = "armerge-cli"
version = "2.2.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/tux3/armerge/"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Tool to merge and control visibility of static libraries"

[dependencies]
armerge = { path = "../armerge" }

clap = { version = "4.5.31", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
